# sh4d0wup

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  PKGBUILD  README.md  deny.toml  docker-compose.yml  plot.yaml  repro-env.toml  skaffold.yaml
.github/workflows/: docker-image.yml  rust.yml
contrib/: artifacts.html  plot-alpine.yaml  plot-apt-more-than-sha256.yaml  plot-archlinux-lsign.yaml  plot-archlinux-replaces.yaml  plot-archlinux-resign.yaml  plot-archlinux.yaml  plot-artifacts.yaml  plot-curl-ipfs.yaml  plot-curl-sh.yaml  plot-debian.yaml  plot-debuginfod.yaml  plot-docker.yaml  plot-elf-galore.yaml  plot-gentoo.yaml  plot-git-tags.yaml  plot-git.yaml  plot-hello-world.yaml  plot-helm.yaml  plot-httpbin.yaml  plot-https.yaml  plot-linuxbrew.yaml  plot-mullvad.yaml  plot-podman-cgr.yaml  plot-podman-docker-hub.yaml  plot-podman-ecr.yaml  plot-podman-gcr.yaml  plot-podman-ghcr.yaml  plot-rustup.yaml  plot-selectors.yaml  plot-signal-desktop.yaml  plot-terraform.yaml  skaffold-deployment.yaml
examples/raccoon/: image.txt  main.rs
src/: args.rs  artifacts.rs  bait.rs  build.rs  certs.rs  check.rs  check_unsupported.rs  compression.rs  errors.rs  httpd.rs  lib.rs  main.rs  oci.rs  pacman.rs  plot.rs  req.rs  route_templates.rs  selectors.rs  sessions.rs  shell.rs  upstream.rs
src/artifacts/: compress.rs  extract.rs  git.rs  infect.rs  mod.rs  signature.rs  tamper.rs  url.rs
src/artifacts/pkgs/: apk.rs  apt.rs  mod.rs  pacman.rs
src/codegen/: c.rs  go.rs  mod.rs  rust.rs
src/hsm/: mod.rs  pgp.rs
src/infect/: apk.rs  deb.rs  elf.rs  elf_fwd_stdin.rs  mod.rs  oci.rs  pacman.rs  sh.rs
src/infect/elf/: c.rs  mod.rs  rust.rs
src/infect/elf_fwd_stdin/: c.rs  go.rs  mod.rs  rust.rs  rust_nostd.rs
src/keygen/: in_toto.rs  mod.rs  openssl.rs  pgp.rs  ssh.rs  tls.rs
src/sign/: in_toto.rs  mod.rs  openssl.rs  pgp.rs
src/tamper/: apk.rs  apt_package_list.rs  apt_release.rs  mod.rs  pacman.rs
src/tamper_idx/: apt_package_list.rs  apt_release.rs  mod.rs  pacman.rs
src/templates/: mod.rs  route.rs  url.rs
src/utils/: apk.rs  mod.rs
