[package]
name = "sh4d0wup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
ar = "0.9.0"
base64 = "0.13.1"
blake2 = "0.10.4"
bzip2 = "0.4.3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.0.3"
env_logger = "0.9.0"
flate2 = "1.0.24"
hex = "0.4.3"
http = "0.2.8"
in-toto = "0.3.0"
indexmap = { version = "1.9.1", features = ["serde"] }
log = "0.4.17"
maplit = "1.0.2"
md-5 = "0.10.5"
memchr = "2.5.0"
nix = { version = "0.25.0", default-features = false, features = ["sched"] }
oci-spec = { version = "0.5.8", features = ["image"], default-features = false }
once_cell = "1.15.0"
openssl = "0.10.42"
peekread = "0.1.1"
rcgen = "0.10.0"
reqwest = { version = "0.11.12", features = ["stream"] }
rust-lzma = "0.5.1"
sequoia-openpgp = "1.10.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
sha2 = "0.10.6"
shell-escape = "0.1.5"
tar = "0.4.38"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "process", "signal"] }
tree_magic_mini = "3.0.3"
unicase = "2.6.0"
url = { version = "2.3.1", features = ["serde"] }
warp = { version = "0.3.2", features = ["tls"] }
warp-reverse-proxy = "0.5.0"
xz = "0.1.0"
zstd = { version = "0.11.2", features = ["pkg-config"] }

[dev-dependencies]
tempfile = "3.3.0"
