[package]
name = "sh4d0wup"
version = "0.9.3"
description = "Signing-key abuse and update exploitation framework"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/sh4d0wup"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.63"
ar = "0.9.0"
blake2 = "0.10.4"
bstr = { version = "1.1.0", features = ["serde"] }
bzip2 = "0.4.3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.0.3"
data-encoding = "2.3.3"
env_logger = "0.11"
flate2 = "1.0.24"
futures = "0.3.25"
futures-util = "0.3.25"
gix-actor = "0.31"
gix-hash = "0.14"
gix-object = "0.42"
handlebars = "5"
hex = "0.4.3"
http = "0.2.8"
in-toto = "0.3.0"
indexmap = { version = "2", features = ["serde"] }
ipnetwork = "0.20.0"
lazy_static = "1.4.0"
log = "0.4.17"
maplit = "1.0.2"
md-5 = "0.10.5"
memchr = "2.5.0"
nix = { version = "0.29.0", default-features = false, features = ["sched"] }
num_cpus = "1.15.0"
oci-spec = { version = "0.6", features = ["image"], default-features = false }
once_cell = "1.15.0"
openssl = "0.10.66"
osshkeys = { version = "0.7", features = ["rustcrypto-cipher"], default-features = false }
pcsc = "2.7.0"
peekread = "0.1.1"
rcgen = { version = "0.13", features = ["aws_lc_rs"] }
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
rust-lzma = "0.6"
sequoia-openpgp = "1.21.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
sha1 = "0.10.5"
sha2 = "0.10.6"
shell-escape = "0.1.5"
talktosc = "0.2"
tar = "0.4.38"
tempfile = "3.3.0"
termcolor = "1.1.3"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread", "process", "signal", "io-std"] }
tree_magic_mini = "3.0.3"
unicase = "2.6.0"
url = { version = "2.3.1", features = ["serde"] }
warp = { version = "0.3.2", features = ["tls"] }
warp-reverse-proxy = "1"
yash-syntax = "0.9"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "zstd"] }
zstd = { version = "0.13", features = ["pkg-config"] }

[dev-dependencies]
semver = "1.0.17"
tempfile = "3.3.0"
