[package]
name = "sh4d0wup"
version = "0.11.0"
description = "Signing-key abuse and update exploitation framework"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/sh4d0wup"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2024"

[features]
default = ["hsm", "zstd/pkg-config"] # https://github.com/gyscos/zstd-rs/pull/309
hsm = ["pcsc", "talktosc"]
vendored = ["openssl/vendored", "xz2/static"]

[dependencies]
anyhow = "1.0.63"
ar = "0.9.0"
blake2 = "0.10.4"
bstr = { version = "1.1.0", features = ["serde"] }
bzip2 = { version = "0.5.1", features = ["libbz2-rs-sys"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.0.3"
data-encoding = "2.3.3"
env_logger = "0.11"
flate2 = "1.0.24"
futures = "0.3.25"
futures-util = "0.3.25"
gix-actor = "0.33"
gix-hash = "0.16"
gix-object = "0.48"
handlebars = "6"
hex = "0.4.3"
http = "0.2.8"
in-toto = "0.4"
indexmap = { version = "2", features = ["serde"] }
ipnetwork = { version = "0.21", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.17"
maplit = "1.0.2"
md-5 = "0.10.5"
memchr = "2.5.0"
nix = { version = "0.29.0", default-features = false, features = ["sched"] }
num_cpus = "1.15.0"
oci-spec = { version = "0.7", features = ["image"], default-features = false }
once_cell = "1.15.0"
openssl = "0.10.60"
osshkeys = { version = "0.7", features = ["rustcrypto-cipher"], default-features = false }
pcsc = { version = "2.7.0", optional = true }
peekread = "0.1.1"
rcgen = { version = "0.13", features = ["aws_lc_rs"] }
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
sequoia-openpgp = { version = "1.21.0", default-features = false, features = ["compression", "crypto-openssl"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
sha1 = "0.10.5"
sha2 = "0.10.6"
shell-escape = "0.1.5"
talktosc = { version = "0.2", optional = true }
tar = "0.4.38"
tempfile = "3.3.0"
termcolor = "1.1.3"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread", "process", "signal", "io-std"] }
tree_magic_mini = "3.0.3"
unicase = "2.6.0"
url = { version = "2.3.1", features = ["serde"] }
warp = { version = "0.3.2", features = ["tls"] }
warp-reverse-proxy = "1"
xz2 = "0.1.7"
yash-syntax = "0.13"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "zstd"] }
zstd = "0.13"

[dev-dependencies]
semver = "1.0.17"
tempfile = "3.3.0"
